# felloak

./: .gitignore  README.md  meson.build
examples/: input_preprocessed.S  input_raw.S  output.wat
src/: common.c  common.h  input_output.c  input_output.h  logging.c  logging.h  main.c  meson.build  output_wasm.c  output_wasm.h  parse_arm.c  parse_arm.h  utils.h  version.h
